--- a/Aeon Multisensor 6/device_type-aeon-multisensor6-v1.4
+++ b/Aeon Multisensor 6/device_type-aeon-multisensor6-v1.4
@@ -153,7 +153,7 @@
 		}
 		standardTile(
         	"configure","device.configure",inactiveLabel: false, decoration: "flat") {
-				state "configure", label:'insecure config', action:"configure", icon:"st.secondary.tools"
+				state "configure", label:'config', action:"configure", icon:"st.secondary.tools"
 			}
 		main([
         	"motion","tamper","temperature","humidity","illuminance","ultravioletIndex"
