fixed range values causing android errors
added limits to ranges in preferences. fixes android app issues.

--- a/Aeon Multisensor 6/device_type-aeon-multisensor6-v1.5
+++ b/Aeon Multisensor 6/device_type-aeon-multisensor6-v1.5
@@ -155,7 +155,7 @@
 			"number",
 			title: "Temperature offset",
             description: "negative values reduce the monitored value positive ones add to it",
-            range: "..",
+            range: "-11..11",
 			defaultValue: 0,
             required: false,
             displayDuringSetup: false
@@ -163,7 +163,7 @@
         	"number",
             title: "Humidity offset",
             description: "negative values reduce the monitored value positive ones add to it",
-			range: "..",
+			range: "-50..50",
 			defaultValue: 0,
 			required: false,
             displayDuringSetup: false
@@ -171,7 +171,7 @@
           	"number",
             title: "Luminance offset",
             description: "negative values reduce the monitored value positive ones add to it",
-            range: "..",
+            range: "-1000..1000",
 			defaultValue: 0,
             required: false,
 	        displayDuringSetup: false
@@ -179,7 +179,7 @@
           	"number",
             title: "Ultraviolet offset",
             description: "negative values reduce the monitored value positive ones add to it",
-            range: "..",
+            range: "-10..10",
 			defaultValue: 0,
 	        required: false,
 			displayDuringSetup: false
