added limits on PIR adjustment range

--- a/Aeon Multisensor 6/device_type-aeon-multisensor6-v1.5
+++ b/Aeon Multisensor 6/device_type-aeon-multisensor6-v1.5
@@ -187,6 +187,7 @@
 	        "number",
     	    title: "PIR motion sensitivity",
 			description: "A value from 0-5, from disabled to high sensitivity",
+			range: "0..5",
 			defaultValue: 1,
 			required: true,
 			displayDuringSetup: true
