--- a/Aeon Multisensor 6/device_type-aeon-multisensor6-v2.1
+++ b/Aeon Multisensor 6/device_type-aeon-multisensor6-v2.1
@@ -137,8 +137,7 @@ It may help to select just the newly added sensor from the available items to se
 					[value: 98, color: "#bc2323"]
 				]
 			}
-		valueTile(
-        	"humidity","device.humidity") {
+		valueTile("humidity","device.humidity", width: 2, height: 2) {
            	state "humidity",label:'RH ${currentValue} %',unit:""
 			}
 		valueTile(
