--- a/Aeon Multisensor 6/device_type-aeon-multisensor6-v2.2
+++ b/Aeon Multisensor 6/device_type-aeon-multisensor6-v2.2
@@ -106,7 +106,7 @@ It may help to select just the newly added sensor from the available items to se
 		status "wake up": "command: 8407, payload:"
 	}
 	tiles (scale: 2) {
-		multiAttributeTile(name:"main", type:"generic", width:6, height:4) {
+		multiAttributeTile(name:"main", type:"generic", width:6, height:4, canChangeIcon: true, canChangeBackground: true) {
 			tileAttribute("device.temperature", key: "PRIMARY_CONTROL") {
             	attributeState "temperature",label:'${currentValue}°',backgroundColors:[
                 	[value: 32, color: "#153591"],
