--- a/Aeon Multisensor 6/device_type-aeon-multisensor6-v2.2
+++ b/Aeon Multisensor 6/device_type-aeon-multisensor6-v2.2
@@ -106,7 +106,7 @@ It may help to select just the newly added sensor from the available items to se
 		status "wake up": "command: 8407, payload:"
 	}
 	tiles (scale: 2) {
-		multiAttributeTile(name:"main", type:"generic", width:6, height:4, canChangeIcon: true, canChangeBackground: true) {
+		multiAttributeTile(name:"main", type:"generic", width:6, height:4) {
 			tileAttribute("device.temperature", key: "PRIMARY_CONTROL") {
             	attributeState "temperature",label:'${currentValue}°',backgroundColors:[
                 	[value: 32, color: "#153591"],
@@ -116,10 +116,10 @@ It may help to select just the newly added sensor from the available items to se
 					[value: 84, color: "#f1d801"],
 					[value: 92, color: "#d04e00"],
 					[value: 98, color: "#bc2323"]
-				]
+				]       
             }
             tileAttribute("device.humidity", key: "SECONDARY_CONTROL") {
-                attributeState "humidity",label:'RH ${currentValue} %',unit:""
+                attributeState "humidity",label:'RH ${currentValue}%',icon:" "
             }
 		}
         standardTile("motion","device.motion", width: 2, height: 2) {
@@ -127,10 +127,10 @@ It may help to select just the newly added sensor from the available items to se
                 state "inactive",label:'no motion',icon:"st.motion.motion.inactive",backgroundColor:"#ffffff"
 			}
 		valueTile("humidity","device.humidity", width: 2, height: 2) {
-           	state "humidity",label:'RH ${currentValue} %',unit:""
+           	state "humidity",label:'RH ${currentValue}%',unit:"${unit}"
 			}
 		valueTile("illuminance","device.illuminance", width: 2, height: 2) {
-            	state "luminosity",label:'${currentValue} ${unit}', unit:"lux", backgroundColors:[
+            	state "luminosity",label:'${currentValue}', unit:"${unit}", backgroundColors:[
                 	[value: 0, color: "#000000"],
                     [value: 1, color: "#060053"],
                     [value: 3, color: "#3E3900"],
