remove config and temp scale tiles
forgot to remove these earlier.. already removed in motion primary
version

--- a/zooZ-4-in-1-Sensor-ZSE40/device_type-zooZ-4-in-1-Sensor-ZSE40_v1.1
+++ b/zooZ-4-in-1-Sensor-ZSE40/device_type-zooZ-4-in-1-Sensor-ZSE40_v1.1
@@ -138,14 +138,8 @@
 		valueTile("battery", "device.battery", decoration: "flat", width: 2, height: 2) {
 			state "battery", label:'${currentValue}% battery', unit:""
 		}
-		standardTile("configure","device.configure", decoration: "flat", width: 2, height: 2) {
-			state "configure", label:'config', action:"configure", icon:"st.secondary.tools"
-		}
-        chartTile(name: "temperatureChart", attribute: "device.temperature") {
-	        state "stopCrashingAndroid", label:'${currentValue}'
-        }
 		main(["main"])
-		details(["main","humidity","illuminance","motion","acceleration","battery","configure","temperatureChart"])
+		details(["main","humidity","illuminance","motion","acceleration","battery"])
 	}
     preferences {
 		input "debugOutput", "boolean", 
