fixed wakeup class command
added specificity to else ocndition and changed wakeupV2 to wakeupV1...
was getting error and battery wasn't reporting on wakeup.

--- a/zooZ-Motion-Sensor-ZSE02/device_type-zooZ-Motion-Sensor-ZSE02_v1.2
+++ b/zooZ-Motion-Sensor-ZSE02/device_type-zooZ-Motion-Sensor-ZSE02_v1.2
@@ -124,10 +124,10 @@ def zwaveEvent(physicalgraph.zwave.commands.wakeupv2.WakeUpNotification cmd) {
 		// we're still in the process of configuring a newly joined device
 		if (state.debug) log.debug("late configure")
 		result += response(configure())
-	} else {
+	} else if (isConfigured()){
 		cmds << zwave.batteryV1.batteryGet().format()
 		cmds << "delay 1200"
-		cmds << zwave.wakeUpV2.wakeUpNoMoreInformation().format()
+		cmds << zwave.wakeUpV1.wakeUpNoMoreInformation().format()
 		[result, response(cmds)]
 	}
 }
