updated / added instructions in the top of the code

--- a/zooZ-Indoor-Siren-ZSE01/device_type-zooZ-indoor-siren-v1.2
+++ b/zooZ-Indoor-Siren-ZSE01/device_type-zooZ-indoor-siren-v1.2
@@ -9,7 +9,19 @@
  *  on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License
  *  for the specific language governing permissions and limitations under the License.
  *
- 
+ ---------------------------------------------------------------------------------------------------------------------------
+   INSTRUCTIONS:
+   * First you will need to create a new device handler in SmartThings. Log in to the IDE and click on Device Handlers in the top menu.
+   Then click "from code" below. You'l be presented with a blank area where you can copy this code and paste it in.
+   * Next, scroll to the bottom and click create. Now click save, then click publish > for me.
+   * You should now see this device type in your list of device handlers. Now we need to pair the device.
+   * Put SmartThings into inclusion mode by going through the add new device dialog.
+   * Tap the button on the siren a few times (turning siren on and off) and you should see it appear on the app screen.
+   * tap the discovered device on the app screen to continue.
+   * Now go to your devices list in the SmartThings app and open up the newly added siren.
+   * The configuration will get sent by pressing the button to activate the siren, then tapping again to cancel.
+   * That's it. Remember this is a USB powered device and the batteries are for BACKUP ONLY. There is no battery level indicator by design.
+
 */
 
  metadata {
