--- a/zooZ-Motion-Sensor-ZSE02/device_type-zooZ-Motion-Sensor-ZSE02_v1.2
+++ b/zooZ-Motion-Sensor-ZSE02/device_type-zooZ-Motion-Sensor-ZSE02_v1.2
@@ -18,28 +18,12 @@
    * Next, scroll to the bottom and click create. Now click save, then click publish > for me.
    * You should now see this device type in your list of device handlers. Now we need to pair the device.
    * Put SmartThings into inclusion mode by going through the add new device dialog.
-   On the bottom of the zooZ 4-in-1 you will see several small holes. There is a series of four holes and a hole all by itself.
-   You'll need a paperclip or something similar that fits into the hole. While holding the sensor a foot or so from the hub,
-   and with SmartThings in inclusion mode, gently depress the button inside the single hole twice rapidly. The light should blink.
-   Please wait a few moments (usually 10 seconds or so) and you should see "zooZ 4-in-1 sensor - RV 1.0" appear in the found devices area.
-   * Touch the "zooZ 4-in-1 sensor - RV 1.0" to configure. Here we will set your temperature scale preferecne and motion preferences.
-   After you make your choices, touch done in the app. 
+   * Tap zwave sensor on the app screen to configure.
    * Now go to your devices list in the SmartThings app and open up the newly added sensor.
-   * In order to get the configuration sent and initial sensor data, we need to wake the sensor up. Press the button on the device
-   one time while holding it close to the hub. If you pressed the button the sensor should blink yellow once. Wait about 30 seconds,
-   then refresh (drag the screen down) and you should see data on the screen for temp, humidity, illuminance, and battery.
-   ** If you do not, please wait a minute or so and refresh the screen again by sliding it down.
-   * If you still do not see anything after refreshing, touch the gear icon to enter the device preferences screen (make any adjustments or not) and then touch done.
-   This will reset the configuration state so the device can be configured again and polled for data. Once you're back at the device screen,
-   while holding the sensor close to the hub, press the small button we pressed earlier one time, making sure that the sensor blinks
-   (if it doesn't, press the button again) and wait a minute or so, then refresh the device screen in the app again.
-   You should see data on the screen now. 
-   *** IF YOU STILL ARE NOT GETTING DATA, go back to the preferences screen and enable debug logging, and touch done. You do not need
-   to press the button on the sensor again at this point. Go into the SmartThings IDE and choose "live logging" from the top menu.
-   While on the live logging  screen and close to your hub with the sensor, press the button on the sensor, making sure it blinks, and watch the screen for results.
-   You should see several lines of data come in slowly. This should tell you all your settings and what the configuration on the sensor is actually set to.
-   It will then poll the sensors for data. If you do not ever see any data coming from the sensor, please post to the community or
-   message me via github or the SmartThings community. 
+   * The configuration and battery state will get pulled by pressing the button once, waiting a couple seconds, and pressing again.
+   * From here on, each time the motion sensor wakes up it will query for battery level. That's it. If you see the red circle in the app 
+	that says disabled, press the switch once again so it turns green and you're now monitoring for motion. Press again to disable the sensor.
+   
  */
  
  metadata {
